[gd_scene load_steps=2 format=3 uid="uid://dmes2nd6gbfw5"]

[ext_resource type="Script" path="res://scenes/inventory/item_button.gd" id="2_laf7f"]

[node name="ItemButton" type="Button"]
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("2_laf7f")

[node name="NameText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 12
text = "Item"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PriceText" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/outline_size = 8
text = "0"
horizontal_alignment = 2
vertical_alignment = 2
